# monitoring

./: Cargo.toml
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/migrations/: 1.sql
backend/src/: error.rs  main.rs  model.rs  route.rs
parser/: Cargo.toml
parser/src/: main.rs
vprikol/: Cargo.toml
vprikol/src/: lib.rs
