[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "mysql" ] }
anyhow = "1.0.69"
dotenv = "0.15.0"
