[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"]}
dotenv = "0.15.0"
fake = "2.5.0"
rand = "0.8.5"
tokio = {version = "1.26.0", features = ["full"]}
vprikol = { path = "../vprikol" }
